--- a/SampleApp/build.gradle
+++ b/SampleApp/build.gradle
@@ -3,8 +3,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.0.0-rc4'
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.14.+'
+        classpath 'com.android.tools.build:gradle:0.13.0'
+        classpath 'com.stanfy.spoon:spoon-gradle-plugin:0.9.+'
     }
 }
 
